--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 skipsdist = True
 
 [testenv]
-commands = nosetests
+commands = nosetests --with-cov --cov simple_lock
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
