replace simple_lock with nessy in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 skipsdist = True
 
 [testenv]
-commands = nosetests --with-cov --cov simple_lock --cov-report=term-missing
+commands = nosetests --with-cov --cov nessy --cov-report=term-missing
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
